<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/app_background_min"
    tools:context=".view.TopupsActivity">

    <!-- Age Group -->
    <LinearLayout
        android:id="@+id/age_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- Label - Age Group -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/age_group_text" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:orientation="horizontal" >

            <!-- Input field for AgeGroup -->
            <EditText
                android:id="@+id/age"
                android:hint="Age"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_gravity="center"
                android:gravity="center" />

            <!-- Unit of age drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_age_unit"
                android:layout_height="match_parent"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:spinnerMode="dropdown"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Family Size -->
    <LinearLayout
        android:id="@+id/family_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- Label - Family Size -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/family_size_text" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="vertical">

            <!-- Age Group drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_family_size"
                android:layout_height="48dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Sum Insured -->
    <LinearLayout
        android:id="@+id/sum_insured"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- Label - Sum Insured -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/sum_insured_text" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="vertical">

            <!-- Age Group drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_sum_insured"
                android:layout_height="48dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Deductable Amount -->
    <LinearLayout
        android:id="@+id/deductable_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <!-- Label - Deductable -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/deductable_text" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2.5"
            android:layout_gravity="center"
            android:gravity="end"
            android:orientation="vertical">

            <!-- Age Group drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_deductable"
                android:layout_height="48dp"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/button_proceed"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:backgroundTint="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/button_show_plans"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/colorBackground" />

    <!-- Loading indicator for data to load -->
    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone" />

</LinearLayout>