<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background_min"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_floater"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:minWidth="80dp"
                android:minHeight="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/colorDark"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/floater_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/floater_option"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />

            </android.support.v7.widget.CardView>

            <!-- A CardView that contains a TextView -->
            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view_topups"
                android:layout_gravity="center"
                android:gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="130dp"
                android:layout_height="140dp"
                android:minWidth="80dp"
                android:minHeight="85dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                card_view:cardBackgroundColor="@color/colorDark"
                card_view:cardElevation="10dp"
                card_view:cardCornerRadius="10dp">

                <TextView
                    android:id="@+id/topups_option"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:text="@string/topups_option"
                    android:textColor="@android:color/black"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:layout_gravity="center"
                    />

            </android.support.v7.widget.CardView>

        </LinearLayout>

        <!-- A CardView that contains a TextView -->
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_special"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="130dp"
            android:layout_height="140dp"
            android:minWidth="80dp"
            android:minHeight="85dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            card_view:cardBackgroundColor="@color/colorDark"
            card_view:cardElevation="10dp"
            card_view:cardCornerRadius="10dp">

            <TextView
                android:id="@+id/special_option"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:text="@string/special_option"
                android:textColor="@android:color/black"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textAlignment="center"
                android:gravity="center"
                android:layout_gravity="center"
                />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</RelativeLayout>